After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722764 - rawparse: fix SEEKING query handling
rawparse: fix SEEKING query handling
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.4.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-01-22 11:51 UTC by Wonchul Lee
Modified: 2014-12-12 20:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix seeking query handling at rawparse (1.72 KB, patch)
2014-01-22 11:51 UTC, Wonchul Lee
needs-work Details | Review
ask seeking query to upstream first (1.55 KB, patch)
2014-11-14 01:58 UTC, Wonchul Lee
committed Details | Review

Description Wonchul Lee 2014-01-22 11:51:54 UTC
Created attachment 266972 [details] [review]
fix seeking query handling at rawparse

When playing a pcm included media, rawparse return negative value.
Although media can do seek, the result of seeking query was not seekable.

Thus I add codes for this case, before convert to byte type query, rawparse ask peerpad query to upstream.
I was checked with PCM/WAV contents with file base playback and http streaming playback.
Comment 1 Sebastian Dröge (slomo) 2014-04-03 19:18:16 UTC
Comment on attachment 266972 [details] [review]
fix seeking query handling at rawparse

I think this should always ask upstream first, independent of the format.

Otherwise this looks correct, thanks :) Can you prepare a new patch for that?
Comment 2 Wonchul Lee 2014-11-14 01:58:55 UTC
Created attachment 290676 [details] [review]
ask seeking query to upstream first

I agree with that, and change to ask seeking query at first
Comment 3 Tim-Philipp Müller 2014-11-22 17:40:51 UTC
I don't entirely understand yet in what situation this didn't work right before?

What was the seeking query that was not answered correctly? What format was it in? What was the source?
Comment 4 Tim-Philipp Müller 2014-11-22 17:54:22 UTC
Nevermind, I can think of a scenario. Pushed the patch with minor changes: if upstream handled the query, it also set the correct range values already, so no need for us to do that, and we might actually unset some value that upstream set (like a stop/duration value).

 commit aa2ecf5e53837f059c79330121aa305e843dc9bb
 Author: Wonchul Lee <wonchul86.lee@lge.com>
 Date:   Fri Nov 14 10:55:14 2014 +0900

    rawparse: send SEEKING query upstream first
    
    Sometimes rawparse does not handle the seeking query
    properly, the rawparse should send the query upstream
    first. For example, upstream could support seeking in
    TIME format (but not in BYTE format), so the BYTE format
    seeking query that rawparse sends in push mode would
    fail.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=722764
Comment 5 Tim-Philipp Müller 2014-12-12 20:25:55 UTC
Cherry-picked into 1.4 branch.